--- a/.github/ci-workflows.yaml
+++ b/.github/ci-workflows.yaml
@@ -22,13 +22,26 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      RESOURCE_PATH: ./src/main/resources/application.yml
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 20
+      ## Project JDK 17 Setting
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '20'
+          java-version: '17'
           distribution: 'temurin'
+
+      - name: Set yml file
+        uses: microsoft/variable-substitution@v1
+        with:
+          files: ${{ env.RESOURCE_PATH }}
+        env:
+          spring.datasource.url: ${{ secrets.DEV_SERVER_DNS }}
+          spring.datasource.username: ${{ secrets.DB_USERNAME }}
+          spring.datasource.password: ${{ secrets.DB_PASSWORD }}
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
@@ -46,4 +59,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: build 파일
-          path: build/libs/demo-0.0.1-SNAPSHOT-plain.jar
+          path: build/libs/whatssue-0.0.1-SNAPSHOT-plain.jar
