--- a/.github/workflows/cd-workflows.yaml
+++ b/.github/workflows/cd-workflows.yaml
@@ -26,7 +26,7 @@ jobs:
         with:
           files: ${{ env.RESOURCE_PATH }}
         env:
-          spring.datasource.url: ${{ secrets.DEV_SERVER_DNS }}
+          spring.datasource.url: ${{ secrets.DB_URL }}
           spring.datasource.username: ${{ secrets.DB_USERNAME }}
           spring.datasource.password: ${{ secrets.DB_PASSWORD }}
 
