--- a/.github/cd-workflows.yaml
+++ b/.github/cd-workflows.yaml
@@ -30,6 +30,15 @@ jobs:
           spring.datasource.username: ${{ secrets.DB_USERNAME }}
           spring.datasource.password: ${{ secrets.DB_PASSWORD }}
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: build
+          cache-read-only: ${{ github.ref != 'refs/heads/main' && github.ref != 'refs/heads/develop' }}
+
       # Login to ghcr
       - name: Login to ghcr
         uses: docker/login-action@v1
