--- a/.github/workflows/cd-workflows.yaml
+++ b/.github/workflows/cd-workflows.yaml
@@ -31,6 +31,10 @@ jobs:
           spring.datasource.password: ${{ secrets.DB_PASSWORD }}
           spring.security.oauth2.client.registration.Kakao.client-id: ${{ secrets.KAKAO_CLIENT_ID }}
           spring.security.oauth2.client.registration.Kakao.client-secret: ${{ secrets.KAKAO_CLIENT_SECRET }}
+
+      - name: Execute Gradle build
+        run: ./gradlew build
+
       # Login to ghcr
       - name: Login to ghcr
         uses: docker/login-action@v1
