--- a/.github/workflows/cd-workflows.yaml
+++ b/.github/workflows/cd-workflows.yaml
@@ -26,7 +26,7 @@ jobs:
         with:
           files: ${{ env.RESOURCE_PATH }}
         env:
-          spring.datasource.url: ${{ secrets.DEV_SERVER_DNS }}
+          spring.datasource.url: ${{ secrets.DB_URL }}
           spring.datasource.username: ${{ secrets.DB_USERNAME }}
           spring.datasource.password: ${{ secrets.DB_PASSWORD }}
           spring.security.oauth2.client.registration.Kakao.client-id: ${{ secrets.KAKAO_CLIENT_ID }}
@@ -38,15 +38,13 @@ jobs:
           cloud.aws.credentials.access-key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           cloud.aws.credentials.secret-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           cloud.aws.region.static: ap-northeast-2
-
-      - name: Grant execute permission for gradlew
+      # Gradle의 사용권한 셋팅
+      - name: Grant Execute permission for gradlew
         run: chmod +x gradlew
+        shell: bash
 
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: build
-          cache-read-only: ${{ github.ref != 'refs/heads/main' && github.ref != 'refs/heads/develop' }}
+      - name: Execute Gradle build
+        run: ./gradlew build
 
       # Login to ghcr
       - name: Login to ghcr
@@ -61,19 +59,16 @@ jobs:
         if: contains(github.ref, 'main') || contains(github.ref, 'develop')
         run: |
           docker build -f Dockerfile -t ghcr.io/onion-city/whatssue_be_v2/whatssue:latest .
-          docker push ghcr.io/Onion-City/Whatssue_BE_v2/whatssue:latest
-
-
+          docker push ghcr.io/onion-city/whatssue_be_v2/whatssue:latest
       # 개발서버 SSH접속 및 배포
       - name: Deploy
         uses: appleboy/ssh-action@master
         id: deploy
         if: contains(github.ref, 'main') || contains(github.ref, 'develop')
         with:
+          key: ${{secrets.SSH_PRIVATE_KEY }}
           host: ${{ secrets.DEV_SERVER_DNS }}
           username: ${{ secrets.DEV_SERVER_USER }}
-          password: ${{ secrets.DEV_SERVER_PASSWORD }}
-          port: ${{ secrets.DEV_SERVER_SSH_PORT }}
           script: |
             echo "${{ secrets.GHCR_TOKEN }}" | sudo docker login ghcr.io -u pinetree2 --password-stdin
             if [ "$(docker ps -aq -f name=whatssue-be)" ]; then
